--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-	"name": "test",
-	"version": "1.0.0",
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"dependencies": {
-		"express": "~4.10.6"
-	}
+  "name": "test",
+  "version": "0.0.1",
+  "description": "Node.js Hello World for OpenShift 3",
+  "main": "server.js", 
+  "dependencies": {
+    "ejs": "^2.4.1", 
+    "express": "^4.13.4"
+  },
+  "scripts": {
+    "start": "node server.js" 
+  },
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/codevubuntu/test.git"
+  }
 }
